- Linux 3.12.74 (CVE#2017-7645 CVE-2016-4997 CVE-2016-4998   CVE-2017-2671 CVE-2017-7261 CVE-2017-7294 CVE-2017-7308   CVE-2017-7616 bnc#1012620 bnc#1033336 boo#1028895 boo#1031052   boo#1031440 bsc#1031003 bsc#1031579 bsc#1034670 bsc#986362 bsc#986365   bnc#1035576 CVE-2016-9604). - Revert "l2tp: take reference on sessions being dumped" (kabi). - Refresh   patches.arch/ppc64le-kvm-0123-KVM-PPC-BOOK3S-Remove-open-coded-make_dsisr-in-align.patch. - Refresh   patches.drivers/mlx-0018-net-mlx4_en-Datapath-resources-allocated-dynamically.patch. - Refresh   patches.suse/msft-hv-0734-Drivers-hv-rename-sc_lock-to-the-more-generic-lock.patch. - Refresh   patches.suse/msft-hv-0845-Drivers-hv-vmbus-do-cleanup-on-all-vmbus_open-failur.patch. - Refresh   patches.suse/msft-hv-0860-Drivers-hv-vmbus-Allocate-ring-buffer-memory-in-NUMA.patch. - Delete   patches.arch/powerpc-Reject-binutils-2.24-when-building-little-en.patch. - Delete   patches.drivers/drm-vmwgfx-NULL-pointer-dereference-in-vmw_surface_define_ioctl.patch. - Delete   patches.drivers/drm-vmwgfx-fix-integer-overflow-in-vmw_surface_define_ioctl.patch. - Delete   patches.fixes/0001-KEYS-Disallow-keyrings-beginning-with-.-to-be-joined.patch. - Delete   patches.fixes/0001-nfsd-check-for-oversized-NFSv2-v3-arguments.patch. - Delete   patches.fixes/mm-mempolicy.c-fix-error-handling-in-set_mempolicy-a.patch. - Delete   patches.fixes/net-packet-fix-overflow-in-check-for-priv-area-size.patch. - Delete   patches.fixes/net-packet-fix-overflow-in-check-for-tp_frame_nr.patch. - Delete   patches.fixes/net-packet-fix-overflow-in-check-for-tp_reserve.patch. - Delete   patches.fixes/netfilter-arp_tables-fix-invoking-32bit-iptable-P-IN.patch. - Delete patches.fixes/ping-implement-proper-locking.patch. - Delete   patches.suse/msft-hv-0753-hv-channel-match-var-type-to-return-type-of-wait_for.patch.

--- a/series.conf
+++ b/series.conf
@@ -100,6 +100,7 @@
 	patches.kernel.org/patch-3.12.70-71
 	patches.kernel.org/patch-3.12.71-72
 	patches.kernel.org/patch-3.12.72-73
+	patches.kernel.org/patch-3.12.73-74
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
@@ -159,6 +160,7 @@
 	patches.kabi/kabi-protect-can_rx_register.patch
 	patches.kabi/revert-RDMA-core-Fix-incorrect-structure-packing-for.patch
 	patches.kabi/revert-give-up-on-gcc-ilog2-constant-optimizations.patch
+	patches.kabi/revert-l2tp-take-reference-on-sessions-being-dumped.patch
 
 	########################################################
 	#
@@ -443,7 +445,6 @@
 	# PPC64 in little endian mode
 	########################################################
 
-	patches.arch/powerpc-Reject-binutils-2.24-when-building-little-en.patch
 	patches.arch/powerpc-Blacklist-GCC-5.4-6.1-and-6.2.patch
 
 	patches.arch/powernv-100-add-explicit-OF-includes
@@ -2357,7 +2358,6 @@
 	# bsc#1018419 - L3: mysql perl script causes high load average 
 	patches.suse/sched-loadavg-Avoid-loadavg-spikes-caused-by-delayed.patch
 
-	patches.fixes/mm-mempolicy.c-fix-error-handling-in-set_mempolicy-a.patch
 
 	# bnc#1027974
 	patches.suse/thp-reduce-indentation-level-in-change_huge_pmd.patch
@@ -2758,7 +2758,6 @@
 	patches.suse/msft-hv-0750-hv-hv_util-move-vmbus_open-to-a-later-place.patch
 	patches.suse/msft-hv-0751-hv-vmbus_post_msg-retry-the-hypercall-on-some-transi.patch
 	patches.suse/msft-hv-0752-hv-vmbus_open-reset-the-channel-state-on-ENOMEM.patch
-	patches.suse/msft-hv-0753-hv-channel-match-var-type-to-return-type-of-wait_for.patch
 	patches.suse/msft-hv-0755-hv-hv_balloon-match-var-type-to-return-type-of-wait_.patch
 	patches.suse/msft-hv-0757-Drivers-hv-vmbus-Add-support-for-the-NetworkDirect-G.patch
 	patches.suse/msft-hv-0758-Drivers-hv-vmbus-Properly-handle-child-device-remove.patch
@@ -3075,10 +3074,6 @@
 	patches.fixes/l2tp-fix-lookup-for-sockets-not-bound-to-a-device-in.patch
 	patches.fixes/l2tp-fix-address-test-in-__l2tp_ip6_bind_lookup.patch
 	patches.fixes/l2tp-hold-tunnel-socket-when-handling-control-frames.patch
-	patches.fixes/ping-implement-proper-locking.patch
-	patches.fixes/net-packet-fix-overflow-in-check-for-priv-area-size.patch
-	patches.fixes/net-packet-fix-overflow-in-check-for-tp_frame_nr.patch
-	patches.fixes/net-packet-fix-overflow-in-check-for-tp_reserve.patch
 	patches.fixes/ether-add-loopback-type-ETH_P_LOOPBACK.patch
 	patches.fixes/ipv6-make-ECMP-route-replacement-less-greedy.patch
 	patches.fixes/0001-VSOCK-sock_put-wasn-t-safe-to-call-in-interrupt-cont.patch
@@ -3098,7 +3093,6 @@
 	patches.fixes/netfilter-bridge-don-t-leak-skb-in-error-paths.patch
 	patches.fixes/netfilter-bridge-Use-__in6_dev_get-rather-than-in6_d.patch
 
-	patches.fixes/netfilter-arp_tables-fix-invoking-32bit-iptable-P-IN.patch
 	patches.fixes/netfilter-allow-logging-fron-non-init-netns.patch
 
 	########################################################
@@ -3245,7 +3239,6 @@
 	patches.kabi/0001-nfs4-treat-lock-owners-as-opaque-values.patch
 	patches.fixes/nfs4_close.fix
 
-	patches.fixes/0001-nfsd-check-for-oversized-NFSv2-v3-arguments.patch
 	patches.fixes/0002-nfsd4-minor-NFSv2-v3-write-decoding-cleanup.patch
 	patches.fixes/0003-nfsd-stricter-decoding-of-write-like-NFSv2-v3-ops.patch
 
@@ -5547,8 +5540,6 @@
 
 	patches.drivers/drm-qxl-Workaround-for-buggy-user-space
 
-	patches.drivers/drm-vmwgfx-NULL-pointer-dereference-in-vmw_surface_define_ioctl.patch
-	patches.drivers/drm-vmwgfx-fix-integer-overflow-in-vmw_surface_define_ioctl.patch
 
 	# Baytrail support (FATE318416)
 	patches.drivers/drm-i915-add-more-VLV-IOSF-sideband-ports-accessors
@@ -11733,8 +11724,6 @@
 	# bsc#940014 kexec_file_load failed: Accessing a corrupted shared library
 	patches.suse/0001-PEFILE-Relax-the-check-on-the-length-of-the-PKCS-7-c.patch
 
-	# Bug 1035576 CVE-2016-9604: kernel-source: Keyrings whose name begin with a '.' are special internal keyrings and souserspace isn't allowed to...
-	patches.fixes/0001-KEYS-Disallow-keyrings-beginning-with-.-to-be-joined.patch
 
 	##########################################################
 	# MOKx support FATE#316531
