keys: Guard against null match function in keyring_search_aux() (bsc#1030593, CVE-2017-2647, CVE-2017-6951).

--- a/series.conf
+++ b/series.conf
@@ -7155,6 +7155,9 @@
 	# Bug 1035576 CVE-2016-9604: kernel-source: Keyrings whose name begin with a '.' are special internal keyrings and souserspace isn't allowed to...
 	patches.fixes/0001-KEYS-Disallow-keyrings-beginning-with-.-to-be-joined.patch
 
+	# Bug 1030593 CVE-2017-2647: kernel-source: Null pointer dereference in search_keyring
+	patches.fixes/0001-keys-Guard-against-null-match-function-in-keyring_se.patch
+
 	##########################################################
 	# MOKx support FATE#316531
 	##########################################################
