mm: Tighten x86 /dev/mem with zeroing reads (bsc#1034405, CVE-2017-7889).

--- a/series.conf
+++ b/series.conf
@@ -6700,6 +6700,8 @@
 	# bsc#1008833, CVE-2016-8633
 	patches.fixes/firewire-net-guard-against-rx-buffer-overflows.patch
 
+	# bsc#1034405, CVE-2017-7889 - mm: Tighten x86 /dev/mem with zeroing reads
+	patches.fixes/mm-tighten-x86-dev-mem-with-zeroing-reads.patch
 
 	########################################################
 	# Other drivers we have added to the tree
