--- a/series.conf
+++ b/series.conf
@@ -2437,6 +2437,7 @@
 	patches.fixes/net-packet-fix-overflow-in-check-for-tp_reserve.patch
 	patches.fixes/net-socket-fix-recvmmsg-not-returning-error-from-soc.patch
 	patches.fixes/tcp-do-not-inherit-fastopen_req-from-parent.patch
+	patches.fixes/dccp-tcp-do-not-inherit-mc_list-from-parent.patch
 
 	########################################################
 	# Netfilter
