--- a/series.conf
+++ b/series.conf
@@ -2439,6 +2439,7 @@
 	patches.fixes/tcp-do-not-inherit-fastopen_req-from-parent.patch
 	patches.fixes/dccp-tcp-do-not-inherit-mc_list-from-parent.patch
 	patches.fixes/ipx-call-ipxitf_put-in-ioctl-error-path.patch
+	patches.fixes/ipv6-Prevent-overrun-when-parsing-v6-header-options.patch
 
 	########################################################
 	# Netfilter
