char: lp: fix possible integer overflow in lp_setup() (bsc#1039456, CVE-2017-1000363).

--- a/series.conf
+++ b/series.conf
@@ -6710,6 +6710,9 @@
 	# bsc#1034405, CVE-2017-7889 - mm: Tighten x86 /dev/mem with zeroing reads
 	patches.fixes/mm-tighten-x86-dev-mem-with-zeroing-reads.patch
 
+	# bsc#1039456, CVE-2017-1000363
+	patches.fixes/char-lp-fix-possible-integer-overflow-in-lp_setup.patch
+
 	########################################################
 	# Other drivers we have added to the tree
 	########################################################
